arhiv-core/src/markup/snapshots/arhiv_core__markup__markup_str__tests__parse_autolink.snap
---
source: arhiv-core/src/markup/markup_str.rs
assertion_line: 461
expression: ast
---
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "range": {
                "end": 19,
                "start": 1
              },
              "typeName": "Text",
              "value": "http://example.com"
            }
          ],
          "link_type": "Autolink",
          "range": {
            "end": 20,
            "start": 0
          },
          "title": "",
          "typeName": "Link",
          "url": "http://example.com"
        }
      ],
      "range": {
        "end": 20,
        "start": 0
      },
      "typeName": "Paragraph"
    }
  ],
  "typeName": "Document"
}
