arhiv-core/src/markup/snapshots/arhiv_core__markup__markup_str__tests__parse_header.snap
---
source: arhiv-core/src/markup/markup_str.rs
assertion_line: 394
expression: ast
---
{
  "children": [
    {
      "children": [
        {
          "range": {
            "end": 13,
            "start": 2
          },
          "typeName": "Text",
          "value": "TEST HEADER"
        }
      ],
      "level": "H1",
      "range": {
        "end": 13,
        "start": 0
      },
      "typeName": "Heading"
    }
  ],
  "typeName": "Document"
}
