arhiv-core/src/markup/snapshots/arhiv_core__markup__markup_str__tests__parse_hr.snap
---
source: arhiv-core/src/markup/markup_str.rs
assertion_line: 416
expression: ast
---
{
  "children": [
    {
      "range": {
        "end": 3,
        "start": 0
      },
      "typeName": "Rule"
    }
  ],
  "typeName": "Document"
}
