arhiv-core/src/markup/snapshots/arhiv_core__markup__markup_str__tests__parse_image.snap
---
source: arhiv-core/src/markup/markup_str.rs
assertion_line: 464
expression: ast
---
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "range": {
                "end": 6,
                "start": 2
              },
              "typeName": "Text",
              "value": "test"
            }
          ],
          "link_type": "Inline",
          "range": {
            "end": 40,
            "start": 0
          },
          "typeName": "Image",
          "url": "http://example.com"
        }
      ],
      "range": {
        "end": 40,
        "start": 0
      },
      "typeName": "Paragraph"
    }
  ],
  "typeName": "Document"
}
