arhiv-core/src/markup/snapshots/arhiv_core__markup__markup_str__tests__parse_link.snap
---
source: arhiv-core/src/markup/markup_str.rs
assertion_line: 450
expression: ast
---
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "range": {
                "end": 5,
                "start": 1
              },
              "typeName": "Text",
              "value": "test"
            }
          ],
          "link_type": "Inline",
          "range": {
            "end": 39,
            "start": 0
          },
          "typeName": "Link",
          "url": "http://example.com"
        }
      ],
      "range": {
        "end": 39,
        "start": 0
      },
      "typeName": "Paragraph"
    }
  ],
  "typeName": "Document"
}
